@@ -1,4 +1,6 @@
 Changes towards version 0.5:
+- Added support for Tremor for Ogg Vorbis decoding (avoids floating point
+  math) - SvdB
 - Fixed T-Pet compulsion graphics (partially); bug #772 - Alex
 - Doing game-state file I/O in memory instead of temp files;
   should avoid problems as in bug #752 - Alex
